bug(settings,content): UX defects with brand messaging banner
Because:
- More than one banner could show up on mobile
- Tab order was wrong
- Settings header could overlap brand header
- The banner wasn't being displayed on the 'confirmation code' page

This Commit:
- Takes a different approach to injecting the banner
- Two banners are now rendered in a static matter at the top & bottom of page
- Responsive CSS is used to control the visibility of these headers

--- a/packages/fxa-settings/src/styles/brand-banner.css
+++ b/packages/fxa-settings/src/styles/brand-banner.css
@@ -12,22 +12,3 @@
     #e3f6ed 102.21%
   );
 }
-
-/** At widths less than 540, text starts wrapping, and more padding is needing */
-@media only screen and (max-width: 540px) {
-  body.brand-messaging {
-    @apply pt-28;
-  }
-}
-
-/** By default a bit of padding is needed to offset the banner at top of page. */
-body.brand-messaging {
-  @apply pt-18;
-}
-
-/** On screens smaller than 480, footer drops to bottom, so no padding is needed */
-@media only screen and (max-width: 480px) {
-  body.brand-messaging {
-    @apply pt-0;
-  }
-}
